--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -33,9 +33,9 @@ spring:
       enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/HomeCookedMeals?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-    username: root
-    password:
+    url: jdbc:mysql://avnadmin:AVNS_Lh2uUzjWtTooAfYgCQ3@mysql-1cc28964-mervecingoz-2c11.aivencloud.com:13018/HomeCookedMeals?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+    username: avnadmin
+    password: AVNS_Lh2uUzjWtTooAfYgCQ3
     hikari:
       poolName: Hikari
       auto-commit: false
